<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/signup_bg"
    android:orientation="vertical"
    android:elevation="15dp"
    tools:context=".views.fragments.RegisterFragment">

    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:text="@string/let_s_create_account"
        android:textAlignment="center"
        android:textColor="@color/blue_grey_light"
        android:textSize="30sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:background="#6FDBDBDB"
        android:padding="15dp"
        app:cornerRadius="40dp"
        android:elevation="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#AEB2C6"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:textSize="22sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black_effective"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/input_password_1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#AEB2C6"
            android:drawableStart="@drawable/ic_fingerprint"
            android:drawablePadding="10dp"
            android:textSize="22sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_username"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#AEB2C6"
            android:drawableStart="@drawable/ic_fingerprint"
            android:drawablePadding="10dp"
            android:textSize="22sp"
            android:ems="10"
            android:hint="@string/password_2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password_1" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/input_incorrect"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password_2"/>

        <TextView
            android:id="@+id/txt_pass_criteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_criteria"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/blue_black_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_error"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass_criteria"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/blue_black_light"
            android:elevation="5dp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>