<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="55dp"
    android:background="@drawable/login_bg"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:elevation="25dp"
    tools:context=".views.fragments.LoginFragment">

    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/let_s_get_started"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/blue_grey_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            app:placeholderTextColor="@color/cyan_light"
            android:hint="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_slogan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#77AEB2C6"
                android:drawablePadding="10dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/bg_color"
                android:textColorHint="@color/light_gray"
                android:singleLine="true"
                android:textSize="22sp"
                android:ems="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            app:placeholderTextColor="@color/cyan_light"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#77AEB2C6"
                android:drawablePadding="10dp"
                android:textSize="22sp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/bg_color"
                android:textColorHint="@color/light_gray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username_or_password_not_correct"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/google"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password"/>

        <TextView
            android:id="@+id/txt_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="45dp"
            android:text="@string/new_user"
            android:textAlignment="textEnd"
            android:textColor="@color/semi_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_error" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_now"
            android:textAlignment="textStart"
            android:textColor="@color/orange"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_new_user"
            app:layout_constraintTop_toTopOf="@id/txt_new_user" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/blue_black_light"
            android:textAllCaps="false"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_new_user"/>

</androidx.constraintlayout.widget.ConstraintLayout>