<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/card">

    <LinearLayout
        android:id="@+id/info_wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="30dp"
        android:background="#F8FDFF"
        android:padding="5dp"
        android:elevation="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="230dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_margin="5dp"
            android:elevation="45dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/content_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/navy_blue"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:text="@string/phone_brand"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_model"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#FF5722"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_brand"/>

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_desc"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_model"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>